--- a/example/homeassistant/shellcommand.yaml
+++ b/example/homeassistant/shellcommand.yaml
@@ -1,3 +1,3 @@
-download_movie: /mnt/data/dietpi_userdata/homeassistant/scripts/download.sh "{{movie}}" 0
-search_movie: /mnt/data/dietpi_userdata/homeassistant/scripts/download.sh "{{movie}}" 1
-download_option: /mnt/data/dietpi_userdata/homeassistant/scripts/download.sh "{{option}}" 2
+download_movie: /path/to/download.sh "{{movie}}" 0
+search_movie: /path/to/download.sh "{{movie}}" 1
+download_option: /path/to/download.sh "{{option}}" 2
