unified configuration in one file. dropped thetvdb for omdb as it's free sonarr script and better guide.

--- a/example/homeassistant_docker/automations.yaml
+++ b/example/homeassistant_docker/automations.yaml
@@ -17,3 +17,18 @@
       - service_template: '{{ trigger.event.data.service }}'
         data_template:
           movie:  "{{ trigger.event.data['movie'] }}"
+  - alias: 'ITFTTTVShow'
+    trigger:
+      - platform: event
+        event_type: ifttt_webhook_received
+        event_data:
+          action: call_service
+    condition:
+      condition: and
+      conditions:
+        - condition: template
+          value_template: "{{ trigger.event.data.service == 'script.download_tvshow' }}"
+    action:
+      - service_template: '{{ trigger.event.data.service }}'
+        data_template:
+          tvshow:  "{{ trigger.event.data['tvshow'] }}"
